@startuml
'https://plantuml.com/sequence-diagram

interface Itf {
}

Itf <|-- A

Itf <|-- Composite
Itf "*" <-- Composite

class Lampe {
    allumer()
    eteindre()
    isOn() : bool
}

class Interrupteur {
    commute()
}

class Circuit {
    allumer()
    eteindre()
    isOn() : bool
    add(Truc);
}

interface Allumable {
     allumer()
     eteindre()
     isOn() : bool
     accept(VisiteurInterface)
}

Allumable <|.. Lampe
Allumable <|.. Circuit
Allumable "*" <-- Circuit

Interrupteur -> Allumable

Client --> Allumable

Client -> VisiteurInterface

interface VisiteurInterface {
    visiteLampe(Lampe)
    visiteCircuit(Circuit)

    visite(Circuit)
    visite(Lampe)

}

VisiteurInterface <|.. VisiteurConsole



@enduml